[package]
name = "cssos-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
time = { version = "0.3", features = ["serde", "formatting"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","uuid","json","chrono","macros","migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
once_cell = "1"
dashmap = "5"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
utoipa = { version = "4", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
dotenvy = "0.15"
