[package]
name = "cssos-rust-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
anyhow = "1"
futures = "0.3"
opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.22"
async-trait = "0.1"
redis = { version = "0.24", features = ["tokio-comp"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","uuid","json","chrono","macros","migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
once_cell = "1"
dashmap = "5"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid", "time"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
num_cpus = "1.16"
sha2 = "0.10"
prometheus = "0.13"

[dev-dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
http = "1"
hyper = { version = "1", features = ["client"] }
tower = "0.4"
tower-service = "0.3"
